@@ -1,6 +1,7 @@
 Revision history for Perl extension CGI::Header.
 
   - Add tests for CGI::Header::Redirect
+  - Fix POD: "CGI::Header::Redirect#is_empty always returns false"
 
 0.32  Mar 9th, 2013
 
